Moved legacy 'plugin' > 'connector' everywhere and republished
